--- a/css/css1.css
+++ b/css/css1.css
@@ -25,7 +25,8 @@ color:#333;
 font-size: 1em;
 font-family: "Segoe UI", sans-serif;
     line-height: 135%;
-      background-image: url('../img/soc.jpg');
+      background-image: url('../img/fon.jpg');
+background-attachment:fixed;
 
  
   
